# MujinaBaseV2

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_named.bat  build_srg.bat  build_vanilla.bat  env.bat  env_console.bat
BuildTools/: devcmd.bat
File2Hex/: File2Hex.sln  File2Hex.vcxproj  main.cpp
InjectableJar/: pom.xml
InjectableJar/InjectableJar/: .gitignore  dependency-reduced-pom.xml  pom.xml  remap.bat  remap_srg.bat  remap_vanilla.bat
InjectableJar/InjectableJar-commons/: dependency-reduced-pom.xml  pom.xml
InjectableJar/InjectableJar-processor/: pom.xml
InjectableJar/InjectableJar/local_maven_repo/minecraft/client/named/: maven-metadata-local.xml
InjectableJar/InjectableJar/local_maven_repo/minecraft/client/named/1.20.1/: _remote.repositories  named-1.20.1.pom
InjectableJar/InjectableJar/local_maven_repo/minecraft/client/named/1.7.10/: _remote.repositories  named-1.7.10.pom
InjectableJar/InjectableJar/local_maven_repo/minecraft/client/named/1.8.9/: _remote.repositories  named-1.8.9.pom
InjectableJar/InjectableJar/remapped/: InjectableJar.jar.hpp
InjectableJar/InjectableJar/src/main/java/io/github/lefraudeur/: Main.java  TestClass.java
InjectableJar/memory-jar-classloader/: pom.xml
MemoryJarClassLoader/: MemoryJarClassLoader.java
memory-jar-classloader/: README.md  pom.xml
src/: MemoryJarClassLoader.class.hpp  main.cpp  mappings.hpp  meta_jni.hpp
src/jvmti/: jvmti.cpp  jvmti.hpp
src/logger/: logger.cpp  logger.hpp
src/transformer/: transformer.cpp  transformer.hpp
(+16 files in other folders)
